# astra_agi

./: CONTRIBUTING.md  Cargo.toml  Cargo.workspace.toml  LICENSE  LICENSE-APACHE  LICENSE-APACHE.txt  LICENSE-MIT  LICENSE-MIT.txt  README.md  add_headers.sh  bug_report.md  rust.json
.github/workflows/: ci.yml  release.yml
examples/: curious_astro.astra  graph_traversal_example.rs  living_astro.astra  persistence_example.rs
frontend/src/: App.js  App.tsx  Dashboard.tsx
src/: autodiff.rs  lib.rs  main.rs
src/cognition/: cognitive_loop.rs  cognitive_state.rs  consolidation.rs  curiosity.rs  episodic_sampler.rs  goal_formation.rs  heuristic_reinforcement.rs  mindspace.rs  mod.rs  mood_curve.rs  motivation.rs  reflection.rs  self_model.rs  sleep_scheduler.rs  thought_trace.rs  trait_drift.rs
src/emotion/: Cargo.toml  astra_emotion README.md  emotion_value_models.rs  mod.rs
src/emotion/src/: lib.rs
src/interfaces/: api.rs  astra_interfaces README.md  mod.rs  nlp.rs  run_collaboration_loop.rs  run_feedback_loop.rs  voice.rs
src/interfaces/language/: mod.rs
src/interfaces/language/astra_lang /: astra_grammar.ebnf  astra_lang README.md
src/interfaces/language/astra_lang /src/: ast.rs  lib.rs  main.rs
src/interfaces/language/astra_lang /tests/: simple.astra
src/knowledge/: Cargo.toml  advanced_epistemic.rs  astra_knowledge README.md  bayesian_reasoner.rs  epistemic_reasoner.rs  extended_ontology.rs  fuzzy_reasoner.rs  graph_utils.rs  mod.rs  ontology.rs  query.rs  query_executor.rs  reasoner.rs  storage.rs  versioning.rs
src/knowledge/src/: lib.rs
src/knowledge/tests/: query_tests.rs
src/learning/: Cargo.toml  README.md  astra_learning README.md  autodiff.rs  lib.rs  mod.rs  run_learning_loop.rs  trainer.rs
src/learning/src/: lib.rs
src/memory/: Cargo.toml  astra_memory README.md  mod.rs  narrative_memory.rs
src/memory/src/: lib.rs
src/personality/: Cargo.toml  astra_personality README.md  emotion.rs  humor.rs  humor_tests.rs  mod.rs  personality.rs
src/personality/src/: lib.rs
src/planning/: Cargo.toml  astra_planning README.md  executor.rs  mod.rs  planner.rs  run_reflection_loop.rs
src/planning/src/: lib.rs
src/reasoning/: meta_reasoner.rs  mod.rs  planner.rs  probabilistic.rs  symbolic.rs
src/runtime/: Cargo.toml  astra_runtime README.md  executor.rs  intent_manager.rs  mod.rs  scheduler.rs
src/runtime/src/: lib.rs
src/visualization/: dashboard.rs  mod.rs
src/web_crawler/: crawler.rs  ingestion.rs  mod.rs
tests/: integration.rs  integration_tests.rs  other_integration_tests.rs  query_tests.rs
