# Cargo manifest for the Astra AGI runtime crate.
# This file defines the crate metadata, dependencies, and configuration for building the
# adaptive runtime of the Astra programming language, focused on evolving artificial
# general intelligence with moral reasoning and natural interaction capabilities.

[package]
name = "astra_agi"
version = "0.1.0"
authors = ["Alex Roussinov <gd2bk1ng@proton.me>"]
edition = "2024"
description = """
Astra AGI is an intent-driven, adaptive runtime for the Astra programming language,
designed to build conscious, evolving artificial general intelligence with moral reasoning,
personalized personality, and natural interaction capabilities.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/gd2bk1ng/astra_lang"
readme = "README.md"
keywords = ["AGI", "intent-driven", "runtime", "artificial intelligence", "astra language"]
categories = ["artificial-intelligence", "runtime"]

[dependencies]
# Local path dependency on the Astra language core crate
astra_lang = { path = "src/interfaces/language/astra_lang" }

[package.metadata.docs.rs]
all-features = true
