# Cargo manifest for the Astra AGI runtime crate.
# This file defines the crate metadata, dependencies, and configuration for building the
# adaptive runtime of the Astra programming language, focused on evolving artificial
# general intelligence with moral reasoning, personalized personality,
# and natural interaction capabilities.

[package]
name = "astra_agi"
version = "0.1.0"
authors = ["Alex Roussinov <gd2bk1ng@proton.me>"]
edition = "2021"
description = """
Astra AGI is an intent-driven, adaptive runtime for the Astra programming language,
designed to build conscious, evolving artificial general intelligence with moral reasoning,
personalized personality, and natural interaction capabilities.
"""
license = "MIT OR Apache-2.0"
repository = "https://github.com/gd2bk1ng/astra_lang"
readme = "README.md"
keywords = ["AGI", "intent-driven", "runtime", "artificial intelligence", "astra language"]
categories = ["artificial-intelligence", "runtime"]

[dependencies]
# Local path dependency on the Astra language core crate
astra_lang = { path = "src/interfaces/language/astra_lang" }
# Web backend framework for REST and WebSocket APIs
actix-web = "4"
# Serialization and deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Async runtime for concurrency and async/await support
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
# Logging facade
log = "0.4"
# Simplified error handling
anyhow = "1.0"
# Randomness utilities (for personality, probabilistic reasoning)
rand = "0.8"
# Optional: Command line argument parsing (for CLI demos)
clap = { version = "4.0", features = ["derive"] }

[package.metadata.docs.rs]
all-features = true
