# =============================================================================
# Astra AGI - Emotion Crate
# File: Cargo.toml
#
# Description:
# This crate models Astra’s emotional state, dynamics, and influence on reasoning
# and personality, supporting affective computing.
#
# Author:      Alex Roussinov
# Created:     2025-12-25
# Updated:     2025-12-25
#
# Licensed under MIT OR Apache-2.0
# =============================================================================

[package]
name = "astra_emotion"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
rand = "0.8"

[features]
default = []
