# ============================================================================
#                           ASTRA AGI • EMOTION MODULE
#                 Affective State Modeling & Cognitive Influence
# ---------------------------------------------------------------------------
#   Purpose:
#       Defines the Emotion crate for Astra AGI. This module encapsulates the
#       system’s affective architecture — emotional state representation,
#       dynamic transitions, modulation effects on reasoning, and personality
#       shaping. Supports affective computing and adaptive behavioral tuning.
#
#   File:        /src/emotion/Cargo.toml
#   Author:      Alex Roussinov
#   Created:     2025-12-25
#   Updated:     2026-01-11
#
#  License:
#      Dual-licensed under the MIT and Apache 2.0 licenses.
#      See LICENSE-MIT and LICENSE-APACHE in the repository root for details.
# ============================================================================

[package]
name = "astra_emotion"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
log = "0.4"
rand = "0.8"

[features]
default = []
