# ============================================================================
#                         ASTRA AGI • KNOWLEDGE MODULE
#              Ontology Engine & Structured Reasoning Infrastructure
# ---------------------------------------------------------------------------
#   Architectural Role:
#       Core component of Astra’s Knowledge Layer. This crate provides the
#       foundations for structured knowledge representation, ontology
#       management, inference mechanisms, and learning support. It serves as
#       the semantic backbone that higher‑order cognition relies on for
#       reasoning, retrieval, and conceptual understanding.
#
#   Core Functions:
#       • Represent structured knowledge and ontological relationships
#       • Support inference, reasoning, and semantic querying
#       • Provide a scalable knowledge base for cognitive modules
#       • Enable integration with graph, logic, or symbolic engines
#
#   File:        /src/knowledge/Cargo.toml
#   Author:      Alex Roussinov
#   Created:     2025-12-25
#   Updated:     2026-01-11
#
#   License:
#       Dual-licensed under the MIT and Apache 2.0 licenses.
#       See LICENSE-MIT and LICENSE-APACHE in the repository root for details.
# ============================================================================

[package]
name = "astra_knowledge"
version = "0.1.0"
edition = "2021"
authors = ["Alex Roussinov"]
license = "MIT OR Apache-2.0"
description = "Knowledge base, ontology management, and inference engine for Astra AGI."
repository = "https://github.com/gd2bk1ng/astra_agi/"
homepage = "https://github.com/gd2bk1ng/astra_agi/"
readme = "README.md"
keywords = ["agi", "knowledge", "ontology", "inference"]
categories = ["ai", "knowledge-management"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

# Optional: graph processing, reasoning, or logic engines
# petgraph = "0.6"
# horn-clause = "0.3"
# symbolic = "0.2"

[features]
default = []
graph = ["petgraph"]
logic = []
full = ["graph", "logic"]
