# =============================================================================
# Astra AGI - Learning Crate
# File: Cargo.toml
#
# Description:
# Implements adaptive learning algorithms including autodifferentiation,
# reinforcement learning, and model training for Astra AGI.
#
# Author:      Alex Roussinov
# Created:     2025-12-25
# Updated:     2025-12-26
#
# Licensed under MIT OR Apache 2.0
# =============================================================================

[package]
name = "astra_learning"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/astra_learning"

[dependencies]
ndarray = "0.15"
autograd = "0.1" # hypothetical crate for autodiff; replace with actual if needed
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
