# ============================================================================
#                         ASTRA AGI • LEARNING CRATE
#        Adaptive Learning, Autodiff, Reinforcement Learning & Training Core
# ----------------------------------------------------------------------------
#   Architectural Role:
#       This crate implements Astra’s foundational learning capabilities,
#       including autodifferentiation, reinforcement learning, stochastic
#       optimization, and model‑training utilities. It forms the computational
#       backbone for systems that adapt, generalize, and refine themselves
#       over time.
#
#   Core Functions:
#       • Autodiff and gradient‑based optimization
#       • Reinforcement learning primitives and training loops
#       • Model evaluation, sampling, and update routines
#       • Asynchronous training pipelines using Tokio
#
#   File:        /src/learning/Cargo.toml
#   Author:      Alex Roussinov
#   Created:     2025-12-25
#   Updated:     2026-01-11
#
# License:
#      Dual-licensed under the MIT and Apache 2.0 licenses.
#      See LICENSE-MIT and LICENSE-APACHE in the repository root for details.
# ============================================================================

[package]
name = "astra_learning"
version = "0.1.0"
edition = "2021"
documentation = "https://docs.rs/astra_learning"

[dependencies]
ndarray = "0.15"
autograd = "0.1" # hypothetical crate for autodiff; replace with actual if needed
anyhow = "1.0"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
default = []
