# =============================================================================
# Astra AGI - Memory Crate
# File: Cargo.toml
#
# Description:
# This crate manages Astra’s narrative memory, episodic storage,
# and retrieval mechanisms for long-term learning and reflection.
#
# Author:      Alex Roussinov
# Created:     2025-12-25
# Updated:     2025-12-25
#
# Licensed under MIT OR Apache-2.0
# =============================================================================

[package]
name = "astra_memory"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"

[features]
default = []
