# ============================================================================
#                         ASTRA AGI • PERSONALITY CRATE
#        Adaptive Traits, Behavioral Modulation & Interaction Style Engine
# ----------------------------------------------------------------------------
#   Architectural Role:
#       Defines Astra’s personality layer, including adaptive behavioral traits,
#       stylistic response generation, and individualized interaction logic.
#       This crate governs how Astra expresses herself, modulates tone, and
#       maintains consistent persona dynamics across conversations.
#
#   Core Functions:
#       • Represent and manage personality traits
#       • Generate adaptive, context‑aware responses
#       • Support behavioral modulation and stylistic tuning
#       • Provide a foundation for long‑term persona consistency
#
#   File:        /src/personality/Cargo.toml
#   Author:      Alex Roussinov
#   Created:     2025-12-25
#   Updated:     2026-01-11
#
#   License:
#       Dual-licensed under the MIT and Apache 2.0 licenses.
#       See LICENSE-MIT and LICENSE-APACHE in the repository root for details.
# ============================================================================

[package]
name = "astra_personality"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
anyhow = "1.0"
log = "0.4"

[features]
default = []
