# ============================================================================
#                         ASTRA AGI • PLANNING CRATE
#        Goal Management, Decision-Making Logic & Action Sequencing Engine
# ----------------------------------------------------------------------------
#   Architectural Role:
#       Implements Astra’s planning and decision-making subsystem. This crate
#       provides the algorithms and data structures responsible for goal
#       formation, hierarchical planning, action sequencing, and adaptive
#       decision logic. It forms the backbone of Astra’s ability to reason
#       about future states and select optimal courses of action.
#
#   Core Functions:
#       • Represent and manage goals, intentions, and constraints
#       • Execute planning algorithms (reactive, deliberative, hierarchical)
#       • Support decision-making under uncertainty
#       • Provide a unified interface for action selection and plan evaluation
#
#   File:        /src/planning/Cargo.toml
#   Author:      Alex Roussinov
#   Created:     2025-12-25
#   Updated:     2026-01-11
#
#   License:
#       Dual-licensed under the MIT and Apache 2.0 licenses.
#       See LICENSE-MIT and LICENSE-APACHE in the repository root for details.
# ============================================================================

[package]
name = "astra_planning"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"

[features]
default = []
